--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
+header {
+  text-align: center;
+}
+
 h1 {
+  font-family: sans-serif;
   color: #4676a9;
   text-align: center;
   font-size: 50px;
@@ -6,6 +11,7 @@ h1 {
 
 h2 {
   color: #cb721c;
+  text-align: center;
 }
 
 footer {
