--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,38 @@
 header {
   text-align: center;
 }
+body {
+  font-family: sans-serif;
+  font-size: 1.25rem;
+  color: #1b2838;
+  line-height: 1.6;
+}
 
 h1 {
   font-family: sans-serif;
   color: #4676a9;
   text-align: center;
-  font-size: 50px;
+  font-size: 7.5rem;
+  line-height: 1;
 }
 
 h2 {
   color: #cb721c;
   text-align: center;
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+section {
+  margin-block: 100px;
 }
 
 footer {
   background-color: #22466c;
   color: #ffffff;
+  text-align: center;
+  font-size: 1.5rem;
 }
