--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,20 @@ body {
   font-size: 1.25rem;
   color: #1b2838;
   line-height: 1.6;
+  padding-inline: 280px;
+  text-align: justify;
 }
 
 h1 {
   font-family: sans-serif;
   color: #4676a9;
   text-align: center;
-  font-size: 7.5rem;
+  font-size: 7rem;
   line-height: 1;
 }
 
 h2 {
   color: #cb721c;
-  text-align: center;
   font-size: 2.5rem;
 }
 
@@ -30,9 +31,17 @@ section {
   margin-block: 100px;
 }
 
+main img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 footer {
+  padding: 20px;
   background-color: #22466c;
   color: #ffffff;
   text-align: center;
   font-size: 1.5rem;
+  border: 10px solid #6e84cf;
 }
